--- a/CrochetCatPause/CrochetCatPause/Views/Shared/_Layout.cshtml
+++ b/CrochetCatPause/CrochetCatPause/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="float-right">
                 <section id="login">
-                    @Html.Partial("_LoginPartial")
+                    @*Html.Partial("_LoginPartial")*@
                 </section>
             </div>
         </div>
