Tumblr embed and different music page

--- a/CrochetCatPause/CrochetCatPause/Views/Home/Index.cshtml
+++ b/CrochetCatPause/CrochetCatPause/Views/Home/Index.cshtml
@@ -6,19 +6,7 @@
 }
 
 <div class="blogContainer">
-    <h1>News</h1>
-    @foreach (var item in Model.BlogPosts) {
-    if (item.Published == true) {
-    <div class="blogPost">
-        <h4 class="blogTitle">@Html.DisplayFor(modelItem => item.Title)</h4>
-        <p class="blogBody">@item.Content</p>
-        <p class="blogInfo">by @Html.DisplayFor(modelItem => item.Author) 
-            on @item.PostTime
-        </p>
-        <hr />
-    </div>
-    }
-    }
+    <script type="text/javascript" src="http://crochetcatpause.tumblr.com/js" ></script>
 </div>
 
 <div class="showsContainer">
