Contact page and function

--- a/CrochetCatPause/CrochetCatPause/Views/Shared/_Layout.cshtml
+++ b/CrochetCatPause/CrochetCatPause/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                         <li>@Html.ActionLink("Learn Things", "About", "Home")</li>
                         <li><a href="http://crochetcatpause.bigcartel.com">Buy Stuff</a></li>
                         <li>@Html.ActionLink("Listen to stuff", "Listen", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     </ul>
                 </nav>
             </div>
