Start on homepage

--- a/CrochetCatPause/CrochetCatPause/Content/NewSite.css
+++ b/CrochetCatPause/CrochetCatPause/Content/NewSite.css
@@ -2,6 +2,7 @@
     background: #010202;
     color: white;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
+    margin: 0;
 }
 
 header {
@@ -17,6 +18,8 @@ ul#menu li {
     display: inline;
     margin: 25px;
     font-size: 25px;
+    text-shadow: -1px 0 black, 0 1px black,
+      1px 0 black, 0 -1px black;
 }
 
 ul#menu li a {
@@ -25,11 +28,11 @@ ul#menu li a {
 }
 
     ul#menu li a:visited, ul#menu li a:link, ul#menu li a:active {
-        color: #885544
+        color: #ffffff
     }
 
     ul#menu li a:hover {
-        color: #803010;
+        color: #888888;
     }
 
 .content-wrapper {
@@ -42,3 +45,15 @@ ul#menu li a {
         height: 315px;
         position: relative;
     }
+
+/*---------------home page--------------*/
+
+.blogContainer {
+    float: left;
+    width: 70%;
+}
+
+.showsContainer {
+    float: right;
+    width: 25%;
+}
