--- a/CrochetCatPause/CrochetCatPause/Content/NewSite.css
+++ b/CrochetCatPause/CrochetCatPause/Content/NewSite.css
@@ -1,7 +1,8 @@
 ﻿body {
     background: #010202;
     color: white;
-    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
+    /*font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;*/
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     margin: 0;
 }
 
@@ -57,3 +58,14 @@ ul#menu li a {
     float: right;
     width: 25%;
 }
+
+.tumblr_posts {
+    list-style-type: none;
+}
+
+.tumblr_post {
+    border-bottom-style: dotted;
+    border-width: .1em;
+    border-color: #777777;
+    margin-bottom: 15px;
+} 
