--- a/CrochetCatPause/CrochetCatPause/Views/Home/Contact.cshtml
+++ b/CrochetCatPause/CrochetCatPause/Views/Home/Contact.cshtml
@@ -45,14 +45,10 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Send" />
         </p>
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
